--- a/styles/main.css
+++ b/styles/main.css
@@ -982,8 +982,7 @@ input[name="teachers__slider__r"] {
   width: 100%;
   position: relative;
   top: -394px;
-  padding: 120px 84px;
-  background-image: url("../images/map/map.svg");
+  padding: 0;
   color: white;
 }
 .map__info {
@@ -992,7 +991,9 @@ input[name="teachers__slider__r"] {
   height: 748px;
   background: #203567;
   border-radius: 26px;
-  position: relative;
+  position: absolute;
+  top: 120px;
+  left: 84px;
 }
 .map__info__address {
   font-weight: 700;
@@ -1033,6 +1034,10 @@ input[name="teachers__slider__r"] {
   z-index: 3;
   top: 386px;
   left: 968px;
+}
+#map {
+  width: 100%;
+  height: 988px;
 }
 .questions {
   position: relative;
@@ -1615,14 +1620,17 @@ input[name="teachers__slider__r"] {
   }
   .map {
     background: none;
-    margin: 0 16px;
+    margin: 0 0 64px;
     padding: 0;
     width: auto;
   }
   .map__info {
-    width: 100%;
+    width: auto;
     height: auto;
     padding: 32px 16px 40px;
+    top: 0;
+    left: 0;
+    margin: 0 16px;
   }
   .map__info__address {
     font-size: 30px;
@@ -1635,6 +1643,9 @@ input[name="teachers__slider__r"] {
   .map__info__extra-info__subtitle {
     font-size: 18px;
     line-height: 22px;
+  }
+  #map {
+    height: 1164px;
   }
   .questions {
     margin: 0 16px;
