--- a/styles/main.css
+++ b/styles/main.css
@@ -50,9 +50,13 @@
   transition: all ease-out 0.2s;
   padding: 40px 0 50px 64px;
 }
+.header__menu__city {
+  cursor: pointer;
+}
 .header__menu__contacts {
   margin-right: 64px;
   display: flex;
+  align-items: center;
 }
 .header__menu__number {
   text-decoration: none;
@@ -62,7 +66,7 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 10px;
-  margin-top: 6px;
+  margin-right: 204px;
 }
 .header__button {
   color: #F35C22;
@@ -293,6 +297,87 @@
   align-items: center;
   margin-top: 8px;
   text-decoration: none;
+  border: none;
+  background: none;
+}
+.modal-w {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  width: 450px;
+  max-width: 100%;
+  transition: transform 0.15s ease 0s, opacity 0.15s ease 0s;
+  transform: scale(1);
+  background-color: #fff;
+  border-radius: 1rem;
+}
+.modal-w__wrapper {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  overflow: hidden;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  z-index: 98;
+  background: rgba(0, 0, 0, 0.4);
+  padding: 30px 16px;
+  display: none;
+}
+.modal-w__content {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 30px;
+  z-index: 99;
+}
+.modal-w__form {
+  width: 100%;
+}
+.modal-w__title {
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 32px;
+  margin-bottom: 50px;
+}
+.modal-w__title-wrapper {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.modal-w__cross {
+  display: block;
+  width: 32px;
+  height: 32px;
+  cursor: pointer;
+}
+.modal-w__cross:hover {
+  transform: scale(1.1);
+}
+#modal-city-ekb:checked ~ label div {
+  background: #326EEA;
+}
+#modal-city-ekb:checked ~ div {
+  color: #326EEA;
+}
+#modal-city-chel:checked ~ label div {
+  background: #326EEA;
+}
+#modal-city-chel:checked ~ div {
+  color: #326EEA;
+}
+#modal-w-tel {
+  width: 100%;
+  margin: 0;
+}
+#modal-w-btn {
+  width: 100%;
+  margin: 30px 0 0;
 }
 .season {
   color: #2B2D33;
@@ -399,9 +484,7 @@
 .price {
   z-index: 0;
   width: 100%;
-  top: -194px;
-  height: 1440px;
-  position: relative;
+  margin-top: -194px;
   background: #203567;
   border-radius: 42px;
   color: white;
@@ -424,6 +507,7 @@
 .price__columns {
   display: flex;
   margin: 0 136px;
+  padding-bottom: 320px;
 }
 .price__margin {
   margin-right: 40px;
@@ -642,11 +726,9 @@
   border-bottom: 1px solid #8F9AB3;
 }
 .license {
-  margin: 0 84px;
+  margin: -200px 84px 0;
   background: #326EEA;
   border-radius: 30px;
-  position: relative;
-  top: -394px;
   color: #FFFFFF;
   display: flex;
   justify-content: space-between;
@@ -677,7 +759,6 @@
 .teachers-wrapper {
   color: #2B2D33;
   position: relative;
-  top: -394px;
   margin: 160px 84px 0;
   display: flex;
 }
@@ -745,21 +826,6 @@
   display: flex;
   width: 10%;
   transition: all 0.5s ease;
-}
-#teachers__slider__radio1:checked ~ .teachers__slide_1 {
-  margin-left: 0;
-}
-#teachers__slider__radio2:checked ~ .teachers__slide_1 {
-  margin-left: -20%;
-}
-#teachers__slider__radio3:checked ~ .teachers__slide_1 {
-  margin-left: -40%;
-}
-#teachers__slider__radio4:checked ~ .teachers__slide_1 {
-  margin-left: -60%;
-}
-#teachers__slider__radio5:checked ~ .teachers__slide_1 {
-  margin-left: -80%;
 }
 input[name="teachers__slider__r"] {
   position: absolute;
@@ -834,7 +900,6 @@ input[name="teachers__slider__r"] {
 }
 .results {
   position: relative;
-  top: -394px;
   margin: 120px 84px 0;
   color: #2B2D33;
 }
@@ -922,7 +987,6 @@ input[name="teachers__slider__r"] {
 }
 .examples {
   position: relative;
-  top: -394px;
 }
 .examples__slider {
   user-select: none;
@@ -957,9 +1021,6 @@ input[name="teachers__slider__r"] {
   min-width: 248px;
   margin: 0 12px;
 }
-.example_1 {
-  margin-left: -284px;
-}
 .example_white {
   background: white;
   border: 1.75px solid #F4F4F4;
@@ -989,7 +1050,6 @@ input[name="teachers__slider__r"] {
   min-height: 988px;
   width: 100%;
   position: relative;
-  top: -394px;
   padding: 0;
   color: white;
 }
@@ -1049,7 +1109,6 @@ input[name="teachers__slider__r"] {
 }
 .questions {
   position: relative;
-  top: -394px;
   margin: 120px 84px 120px 194px;
   color: #2B2D33;
 }
@@ -1095,7 +1154,6 @@ input[name="teachers__slider__r"] {
 }
 .photos {
   position: relative;
-  top: -394px;
   margin: 0 84px 120px;
   display: flex;
 }
@@ -1160,8 +1218,7 @@ input[name="teachers__slider__r"] {
 }
 .footer {
   position: relative;
-  top: -394px;
-  margin: 0 84px;
+  margin: 0 84px 40px;
   color: #2B2D33;
   display: flex;
   justify-content: space-between;
@@ -1205,6 +1262,133 @@ input[name="teachers__slider__r"] {
 }
 #city-chel:checked ~ div {
   color: #326EEA;
+}
+@media (max-width: 1300px) {
+  .wrapper,
+  .education-info {
+    padding-left: 40px !important;
+    padding-right: 40px !important;
+  }
+  .teachers-wrapper,
+  .results,
+  .questions,
+  .footer {
+    margin-right: 40px !important;
+    margin-left: 40px !important;
+  }
+  .header {
+    padding: 0 40px;
+  }
+  .header__menu__contacts {
+    width: 300px;
+    margin-right: 0;
+    margin-left: 10px;
+  }
+  .header__menu__contacts > a img {
+    margin-left: 24px;
+  }
+  .header__menu__time {
+    margin-right: 80px;
+  }
+  .header__menu__number {
+    font-size: 16px;
+  }
+  .navbar__link {
+    padding-right: 10px;
+  }
+  .page-title,
+  .page-title__span {
+    font-size: 64px;
+    line-height: 64px;
+  }
+  .recruit__title,
+  .recruit__title span {
+    font-size: 48px;
+    line-height: 50px;
+  }
+  .recruit__title {
+    width: 300px;
+  }
+  .recruit__discount {
+    top: 900px;
+  }
+  .benefits__block:last-child {
+    margin-right: 40px;
+  }
+  .benefits__block:first-child {
+    margin-left: 40px;
+  }
+  .benefits__hours__alert,
+  .benefits__hours__alert span {
+    font-size: 20px;
+    line-height: 24px;
+  }
+  .price__columns {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .price__check {
+    margin-top: 50px;
+  }
+  .document-img {
+    width: 350px;
+  }
+  .teachers {
+    margin: 50px 0 0;
+  }
+  .teachers-wrapper {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .comment {
+    margin-right: 20px;
+  }
+  .comment__title {
+    font-size: 24px;
+    line-height: 28px;
+  }
+  .comment__body {
+    font-size: 14px;
+    line-height: 16px;
+  }
+  #photo-1,
+  .photo__bg,
+  #photo-3,
+  #photo-4,
+  #photo-5 {
+    width: 200px;
+  }
+  .slider__button__wrapper {
+    position: relative;
+    top: auto;
+    margin: 20px 0;
+    left: 265px;
+  }
+  .photos {
+    width: fit-content;
+    margin-right: 40px !important;
+    margin-left: 40px !important;
+  }
+  .photos__right {
+    max-width: 250px;
+  }
+  .photo__bg {
+    height: 200px;
+  }
+  #photo-2 {
+    width: 160px;
+  }
+  #photo-middle {
+    width: 350px;
+  }
+  #photo-logo img {
+    width: 220px;
+    top: 450px;
+    left: 470px;
+  }
+  .tablet-hidden {
+    display: none;
+  }
 }
 @media (max-width: 767px) {
   .desktop__hidden {
@@ -1255,6 +1439,8 @@ input[name="teachers__slider__r"] {
     display: none;
   }
   .header {
+    top: 0;
+    left: 0;
     display: block;
     height: auto;
     padding: 0 16px;
@@ -1621,10 +1807,10 @@ input[name="teachers__slider__r"] {
     text-align: left;
   }
   .examples {
-    margin: 0 16px;
+    margin: 0 16px 80px;
   }
   .example_1 {
-    margin-left: 170px;
+    margin-left: 2364px;
   }
   .map {
     background: none;
