--- a/styles/main.less
+++ b/styles/main.less
@@ -70,9 +70,14 @@
     transition: all ease-out 0.2s;
     padding: 40px 0 50px 64px;
 
+    &__city {
+      cursor: pointer;
+    }
+
     &__contacts {
       margin-right: 64px;
       display: flex;
+      align-items: center;
     }
 
     &__number {
@@ -84,7 +89,7 @@
       font-weight: 400;
       font-size: 14px;
       line-height: 10px;
-      margin-top: 6px;
+      margin-right: 204px;
     }
   }
 
@@ -373,8 +378,108 @@
       align-items: center;
       margin-top: 8px;
       text-decoration: none;
+      border: none;
+      background: none;
     }
   }
+}
+
+.modal-w {
+  &__wrapper {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    overflow: hidden;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    z-index: 98;
+    background: rgba(0, 0, 0, 0.4);
+    padding: 30px 16px;
+    display: none;
+  }
+
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  width: 450px;
+  max-width: 100%;
+  //height: 500px;
+  transition: transform 0.15s ease 0s, opacity 0.15s ease 0s;
+  transform: scale(1);
+  //pointer-events: auto;
+  background-color: #fff;
+  border-radius: 1rem;
+
+  &__content {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    //justify-content: space-between;
+    align-items: center;
+    margin: 30px;
+    z-index: 99;
+  }
+
+  &__form {
+    width: 100%;
+  }
+
+  &__title {
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 32px;
+    margin-bottom: 50px;
+  }
+
+  &__title-wrapper {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+  }
+
+  &__cross {
+    display: block;
+    width: 32px;
+    height: 32px;
+    cursor: pointer;
+
+    &:hover {
+      transform: scale(1.1);
+    }
+
+    //margin: 12px 12px 0 12px;
+  }
+}
+
+#modal-city-ekb:checked ~ label div {
+  background: #326EEA;
+}
+
+#modal-city-ekb:checked ~ div {
+  color: #326EEA;
+}
+
+#modal-city-chel:checked ~ label div {
+  background: #326EEA;
+}
+
+#modal-city-chel:checked ~ div {
+  color: #326EEA;
+}
+
+#modal-w-tel {
+  width: 100%;
+  margin: 0;
+}
+
+#modal-w-btn {
+  width: 100%;
+  margin: 30px 0 0;
 }
 
 .season {
@@ -504,9 +609,9 @@
 .price {
   z-index: 0;
   width: 100%;
-  top: @price-offset;
-  height: 1440px;
-  position: relative;
+  margin-top: @price-offset;
+  //height: 1440px;
+  //position: relative;
   background: #203567;
   border-radius: 42px;
   color: white;
@@ -531,6 +636,7 @@
   &__columns {
     display: flex;
     margin: 0 136px;
+    padding-bottom: 320px;
   }
 
   &__margin {
@@ -797,11 +903,10 @@
 
 @license-offset: -200px;
 .license {
-  margin: 0 84px;
+  margin: @license-offset 84px 0;
   background: #326EEA;
   border-radius: 30px;
-  position: relative;
-  top: @price-offset+@license-offset;
+  //position: relative;
   color: #FFFFFF;
   display: flex;
   justify-content: space-between;
@@ -837,7 +942,7 @@
   &-wrapper {
     color: #2B2D33;
     position: relative;
-    top: @price-offset+@license-offset;
+    //top: @price-offset+@license-offset;
     margin: 160px 84px 0;
     display: flex;
   }
@@ -923,25 +1028,25 @@
 
 }
 
-#teachers__slider__radio1:checked ~ .teachers__slide_1 {
-  margin-left: 0;
-}
-
-#teachers__slider__radio2:checked ~ .teachers__slide_1 {
-  margin-left: -20%;
-}
-
-#teachers__slider__radio3:checked ~ .teachers__slide_1 {
-  margin-left: -40%;
-}
-
-#teachers__slider__radio4:checked ~ .teachers__slide_1 {
-  margin-left: -60%;
-}
-
-#teachers__slider__radio5:checked ~ .teachers__slide_1 {
-  margin-left: -80%;
-}
+//#teachers__slider__radio1:checked ~ .teachers__slide_1 {
+//  margin-left: 0;
+//}
+//
+//#teachers__slider__radio2:checked ~ .teachers__slide_1 {
+//  margin-left: -20%;
+//}
+//
+//#teachers__slider__radio3:checked ~ .teachers__slide_1 {
+//  margin-left: -40%;
+//}
+//
+//#teachers__slider__radio4:checked ~ .teachers__slide_1 {
+//  margin-left: -60%;
+//}
+//
+//#teachers__slider__radio5:checked ~ .teachers__slide_1 {
+//  margin-left: -80%;
+//}
 
 input[name="teachers__slider__r"] {
   position: absolute;
@@ -1035,7 +1140,7 @@ input[name="teachers__slider__r"] {
 
 .results {
   position: relative;
-  top: @price-offset+@license-offset;
+  //top: @price-offset+@license-offset;
   margin: 120px 84px 0;
   color: #2B2D33;
 
@@ -1140,7 +1245,6 @@ input[name="teachers__slider__r"] {
 
 .examples {
   position: relative;
-  top: @price-offset+@license-offset;
   //margin: 0 84px;
 
   &__slider {
@@ -1157,9 +1261,11 @@ input[name="teachers__slider__r"] {
     & img {
       poiner-events: none;
     }
+
     &.grab {
       cursor: grab;
     }
+
     &.grabbing {
       cursor: grabbing;
     }
@@ -1186,7 +1292,7 @@ input[name="teachers__slider__r"] {
   margin: 0 12px;
 
   &_1 {
-    margin-left: -284px;
+    //margin-left: -284px;
   }
 
   &_white {
@@ -1224,7 +1330,6 @@ input[name="teachers__slider__r"] {
   min-height: 988px;
   width: 100%;
   position: relative;
-  top: @price-offset+@license-offset;
   padding: 0;
   //background-image: url("../images/map/map.svg");
   color: white;
@@ -1295,7 +1400,6 @@ input[name="teachers__slider__r"] {
 
 .questions {
   position: relative;
-  top: @price-offset+@license-offset;
   margin: 120px 84px 120px 194px;
   color: #2B2D33;
 
@@ -1349,7 +1453,6 @@ input[name="teachers__slider__r"] {
 
 .photos {
   position: relative;
-  top: @price-offset+@license-offset;
   margin: 0 84px 120px;
   display: flex;
 
@@ -1429,8 +1532,7 @@ input[name="teachers__slider__r"] {
 
 .footer {
   position: relative;
-  top: @price-offset+@license-offset;
-  margin: 0 84px;
+  margin: 0 84px 40px;
   color: #2B2D33;
   display: flex;
   justify-content: space-between;
@@ -1485,6 +1587,161 @@ input[name="teachers__slider__r"] {
 
 #city-chel:checked ~ div {
   color: #326EEA;
+}
+
+@media (max-width: 1300px) {
+  .wrapper, .education-info {
+    padding-left: 40px !important;
+    padding-right: 40px !important;
+  }
+
+  .teachers-wrapper, .results, .questions, .footer {
+    margin-right: 40px !important;
+    margin-left: 40px !important;
+  }
+
+  .header {
+    padding: 0 40px;
+
+    &__menu {
+      &__contacts {
+        width: 300px;
+
+        margin-right: 0;
+        margin-left: 10px;
+
+        & > a img {
+          margin-left: 24px;
+        }
+      }
+
+      &__time {
+        margin-right: 80px;
+      }
+
+      &__number {
+        font-size: 16px;
+      }
+    }
+  }
+
+  .navbar {
+    &__link {
+      padding-right: 10px;
+    }
+  }
+
+  .page-title, .page-title__span {
+    font-size: 64px;
+    line-height: 64px;
+  }
+
+  .recruit__title, .recruit__title span {
+    font-size: 48px;
+    line-height: 50px;
+  }
+
+  .recruit__title {
+    width: 300px;
+  }
+
+  .recruit__discount {
+    top: 900px;
+  }
+
+  .benefits__block:last-child {
+    margin-right: 40px;
+  }
+
+  .benefits__block:first-child {
+    margin-left: 40px;
+  }
+
+  .benefits__hours__alert, .benefits__hours__alert span {
+    font-size: 20px;
+    line-height: 24px;
+  }
+
+  .price {
+    &__columns {
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    &__check {
+      margin-top: 50px;
+    }
+  }
+
+  .document-img {
+    width: 350px;
+  }
+
+  .teachers {
+    margin: 50px 0 0;
+
+    &-wrapper {
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+  }
+
+  .comment {
+    margin-right: 20px;
+
+    &__title {
+      font-size: 24px;
+      line-height: 28px;
+    }
+
+    &__body {
+      font-size: 14px;
+      line-height: 16px;
+    }
+  }
+
+  #photo-1, .photo__bg, #photo-3, #photo-4, #photo-5 {
+    width: 200px;
+  }
+
+  .slider__button__wrapper {
+    position: relative;
+    top: auto;
+    margin: 20px 0;
+    left: 265px;
+  }
+
+  .photos {
+    width: fit-content;
+    margin-right: 40px !important;
+    margin-left: 40px !important;
+
+    &__right {
+      max-width: 250px;
+    }
+  }
+
+  .photo__bg {
+    height: 200px;
+  }
+
+  #photo-2 {
+    width: 160px;
+  }
+
+  #photo-middle {
+    width: 350px;
+  }
+
+  #photo-logo img {
+    width: 220px;
+    top: 450px;
+    left: 470px;
+  }
+
+  .tablet-hidden {
+    display: none;
+  }
 }
 
 @media (max-width: 767px) {
@@ -1552,6 +1809,8 @@ input[name="teachers__slider__r"] {
   }
 
   .header {
+    top: 0;
+    left: 0;
     display: block;
     height: auto;
     padding: 0 16px;
@@ -1762,6 +2021,7 @@ input[name="teachers__slider__r"] {
       &__download {
         font-size: 24px;
         line-height: 32px;
+
       }
     }
 
@@ -2021,14 +2281,14 @@ input[name="teachers__slider__r"] {
   }
 
   .examples {
-    margin: 0 16px;
+    margin: 0 16px 80px;
     //&__slider {
     //  width: 100%;
     //}
   }
 
   .example_1 {
-    margin-left: 170px;
+    margin-left: 2364px;
   }
 
   .map {
@@ -2064,9 +2324,11 @@ input[name="teachers__slider__r"] {
       }
     }
   }
+
   #map {
     height: 1164px;
   }
+
   .questions {
     margin: 0 16px;
 
