--- a/styles/main.css
+++ b/styles/main.css
@@ -312,6 +312,7 @@
   background: none;
 }
 .modal-w {
+  transition: all 0.5s linear;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -354,7 +355,7 @@
   font-weight: 700;
   font-size: 30px;
   line-height: 32px;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 .modal-w__title-wrapper {
   display: flex;
@@ -373,13 +374,13 @@
 #modal-city-ekb:checked ~ label div {
   background: #326EEA;
 }
-#modal-city-ekb:checked ~ div {
+#modal-city-ekb:checked ~ label {
   color: #326EEA;
 }
 #modal-city-chel:checked ~ label div {
   background: #326EEA;
 }
-#modal-city-chel:checked ~ div {
+#modal-city-chel:checked ~ label {
   color: #326EEA;
 }
 #modal-w-tel {
@@ -993,8 +994,6 @@ input[name="teachers__slider__r"] {
   top: 670px;
   width: 160px;
   height: 160px;
-  left: 180px;
-  z-index: -1;
 }
 .comment__margin {
   margin-top: 64px;
@@ -1269,13 +1268,13 @@ input[name="teachers__slider__r"] {
 #city-ekb:checked ~ label div {
   background: #326EEA;
 }
-#city-ekb:checked ~ div {
+#city-ekb:checked ~ label {
   color: #326EEA;
 }
 #city-chel:checked ~ label div {
   background: #326EEA;
 }
-#city-chel:checked ~ div {
+#city-chel:checked ~ label {
   color: #326EEA;
 }
 @media (max-width: 1300px) {
@@ -1405,7 +1404,7 @@ input[name="teachers__slider__r"] {
     display: none;
   }
 }
-@media (max-width: 767px) {
+@media (max-width: 768px) {
   .desktop__hidden {
     visibility: visible;
     position: relative;
@@ -1473,6 +1472,7 @@ input[name="teachers__slider__r"] {
   }
   .header__menu__contacts {
     margin-right: 0;
+    width: auto;
   }
   .header__logo {
     padding: 0;
@@ -1564,6 +1564,7 @@ input[name="teachers__slider__r"] {
     margin: 32px 16px 30px;
     font-size: 44px;
     line-height: 48px;
+    width: auto;
   }
   .recruit__info {
     display: flex;
@@ -1575,6 +1576,7 @@ input[name="teachers__slider__r"] {
     font-size: 24px;
     line-height: 26px;
     padding-bottom: 32px;
+    width: auto;
   }
   .recruit__info form {
     display: flex;
@@ -1800,6 +1802,8 @@ input[name="teachers__slider__r"] {
   }
   .comment__alert {
     top: 0;
+    left: 180px;
+    z-index: -1;
   }
   .results {
     margin: 0 16px;
