--- a/styles/main.less
+++ b/styles/main.less
@@ -2149,6 +2149,7 @@ input[name="teachers__slider__r"] {
     &__columns {
       margin: 0 !important;
       flex-wrap: wrap;
+      padding-bottom: 0;
     }
 
     &__margin {
@@ -2175,7 +2176,7 @@ input[name="teachers__slider__r"] {
     display: flex;
     flex-wrap: wrap;
     height: auto;
-    margin: 0 16px;
+    margin: -180px 16px 0;
 
     &__wrapper {
       margin: 0 16px;
@@ -2476,7 +2477,7 @@ input[name="teachers__slider__r"] {
   }
 
   .footer {
-    margin: 0 16px;
+    margin: 0 16px 24px;
     flex-wrap: wrap;
 
     &__info {
