--- a/styles/main.css
+++ b/styles/main.css
@@ -1711,6 +1711,7 @@ input[name="teachers__slider__r"] {
   .price__columns {
     margin: 0 !important;
     flex-wrap: wrap;
+    padding-bottom: 0;
   }
   .price__margin {
     margin-right: 20px;
@@ -1729,7 +1730,7 @@ input[name="teachers__slider__r"] {
     display: flex;
     flex-wrap: wrap;
     height: auto;
-    margin: 0 16px;
+    margin: -180px 16px 0;
   }
   .license__wrapper {
     margin: 0 16px;
@@ -1965,7 +1966,7 @@ input[name="teachers__slider__r"] {
     width: 296px;
   }
   .footer {
-    margin: 0 16px;
+    margin: 0 16px 24px;
     flex-wrap: wrap;
   }
   .footer__links {
