--- a/styles/main.css
+++ b/styles/main.css
@@ -60,7 +60,7 @@
   flex: auto;
   align-items: center;
   transition: all ease-out 0.2s;
-  padding: 40px 0 50px 64px;
+  padding-left: 64px;
 }
 .header__menu__city {
   cursor: pointer;
