mobile header menu style fixed

--- a/styles/main.less
+++ b/styles/main.less
@@ -5,6 +5,7 @@
   src: local("PT Root UI"),
   url("../fonts/PT Root UI_Light.otf") format("otf")
 }
+
 @font-face {
   font-family: "PT Root UI";
   font-style: normal;
@@ -12,6 +13,7 @@
   src: local("PT Root UI"),
   url("../fonts/PT Root UI_Regular.otf") format("otf")
 }
+
 @font-face {
   font-family: "PT Root UI";
   font-style: normal;
@@ -19,6 +21,7 @@
   src: local("PT Root UI"),
   url("../fonts/PT Root UI_Medium.otf") format("otf")
 }
+
 @font-face {
   font-family: "PT Root UI";
   font-style: normal;
@@ -399,6 +402,7 @@
 
 .modal-w {
   transition: all 0.5s linear;
+
   &__wrapper {
     position: fixed;
     top: 0;
@@ -802,6 +806,7 @@
     align-items: center;
     margin-top: 50px;
     width: fit-content;
+
     &__title {
       max-width: 62px;
       font-size: 16px;
@@ -813,6 +818,7 @@
       line-height: 48px;
       margin: 4px 0 4px 16px;
     }
+
     &__subtitle {
       font-size: 20px;
       line-height: 21px;
@@ -864,6 +870,7 @@
 
   &__subject {
     color: #2B2D33;
+
     & div {
       color: #2B2D33;
       font-weight: 400;
@@ -871,6 +878,7 @@
       line-height: 21px;
       font-family: 'PT Mono', monospace;
     }
+
     &__price {
       text-align: right;
     }
@@ -1025,6 +1033,7 @@
     &__track {
 
     }
+
     &__navigation {
       //position: absolute;
       display: flex;
@@ -1856,6 +1865,7 @@ input[name="teachers__slider__r"] {
     height: auto;
     padding: 0 16px;
     z-index: 10;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.05);
 
     &__profile {
       margin-left: 0;
@@ -1864,6 +1874,7 @@ input[name="teachers__slider__r"] {
 
     &__menu {
       padding: 16px 0;
+      border-top: 1px solid #F2F2F2;
 
       &_desktop {
         padding: 7px 0;
@@ -2033,9 +2044,11 @@ input[name="teachers__slider__r"] {
 
   .universities {
     margin-bottom: 80px;
+
     &__icons {
       justify-content: center;
     }
+
     &__title {
       text-align: left;
       font-size: 24px;
@@ -2081,9 +2094,11 @@ input[name="teachers__slider__r"] {
 
   .season {
     width: 50%;
+
     &:nth-child(odd) {
       padding-right: 20px;
     }
+
     &__title {
       font-size: 30px;
       line-height: 32px;
@@ -2392,7 +2407,8 @@ input[name="teachers__slider__r"] {
       line-height: 26px;
       max-width: 296px;
     }
-    & form>div>div {
+
+    & form > div > div {
       width: 100%;
     }
 
