--- a/styles/main.css
+++ b/styles/main.css
@@ -1480,6 +1480,7 @@ input[name="teachers__slider__r"] {
     height: auto;
     padding: 0 16px;
     z-index: 10;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.05);
   }
   .header__profile {
     margin-left: 0;
@@ -1487,6 +1488,7 @@ input[name="teachers__slider__r"] {
   }
   .header__menu {
     padding: 16px 0;
+    border-top: 1px solid #F2F2F2;
   }
   .header__menu_desktop {
     padding: 7px 0;
