--- a/styles/main.less
+++ b/styles/main.less
@@ -2206,6 +2206,7 @@ input[name="teachers__slider__r"] {
 
     &__discount {
       margin: 20px 0 40px 0;
+      max-width: 300px;
     }
 
     &__check {
