add price-calculator to html

--- a/styles/main.css
+++ b/styles/main.css
@@ -1365,6 +1365,9 @@ input[name="teachers__slider__r"] {
   .price__check {
     margin-top: 50px;
   }
+  .price__discount {
+    margin-bottom: 40px;
+  }
   .document-img {
     width: 350px;
   }
