--- a/styles/main.less
+++ b/styles/main.less
@@ -1721,6 +1721,9 @@ input[name="teachers__slider__r"] {
     &__check {
       margin-top: 50px;
     }
+    &__discount {
+      margin-bottom: 40px;
+    }
   }
 
   .document-img {
