--- a/styles/main.less
+++ b/styles/main.less
@@ -676,7 +676,9 @@
     margin-bottom: 26px;
     display: flex;
     max-width: 194px;
-
+    display: flex;
+    align-items: center;
+    
     &__name {
       font-size: 19px;
       line-height: 20px;
