--- a/styles/main.less
+++ b/styles/main.less
@@ -676,9 +676,8 @@
     margin-bottom: 26px;
     display: flex;
     max-width: 194px;
-    display: flex;
     align-items: center;
-    
+
     &__name {
       font-size: 19px;
       line-height: 20px;
@@ -2184,6 +2183,7 @@ input[name="teachers__slider__r"] {
     &__columns {
       margin: 0 !important;
       flex-wrap: wrap;
+      justify-content: start;
       padding-bottom: 0;
     }
 
